# VM8

./: .gitignore  CMakeLists.txt  classdiagram.wsd  composition.json  generator.py  mathparser.wsd  opcodes.json  state.wsd  test  test.vm8
assembler/: CMakeLists.txt
assembler/include/: assembler.h  command_providers.h  command_size_provider.h  expressions.h  lexer.h  loader.h  math_expression_member.h  math_parser.h  metadata_provider.h  rpn.h  rules_provider.h  token.h  trim.h  types.h  validator.h  validator_provider.h
assembler/include/providers/: base_provider.h  int_math_provider.h  jump_provider.h  mov_command_provider.h  one_byte_cmd.h  one_register_cmd.h  short_math_provider.h
assembler/src/: assembler.cpp  lexer.cpp  loader.cpp  main.cpp  math_parser.cpp  metadata_provider.cpp  validator_provider.cpp
include/: base_command_handler.h  command_handlers_provider.h  interpretator.h  loader.h  memory.h  types.h
include/commands/: base_math.h  float_math.h  int_math.h  io.h  jump.h  shortint_math.h  stack_control.h  transfer.h
src/: interpretator.cpp  loader.cpp  main.cpp
